--- a/src/cistudio copy.html
+++ b/src/cistudio copy.html
@@ -2,49 +2,55 @@
 <html>
     <head>
     <meta charset="UTF-8">
-    <title>SAS</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <title>SAS CI</title>
+        <meta name="viewport" content="initial-scale=1">
     </head>
     <style>
     
+    *{
+        margin:0;
+        padding:0;
+    }
+
     html,body{
-        height: 100%;
-        width: 100%;
-        margin: 0px;
         padding:0 !important;
+        padding:100px 0;
+        width:100%;
+        height:100%;
         overflow:auto;
         background-color: rgb(242, 242, 242);
+        /* font-family:'Courier New', Courier, monospace; */
         font-family: 'Arial Narrow', 新宋体;
-        font-size: small;
     }
 
     .header{
-        position:absolute;
+        position:fixed;
         top: 0px;
         width:100%;
         height:65px;
-        line-height: 65px;
+        /* line-height:65px; */
     }
 
-    .middle{
-        position:absolute;
-        top: 65px;
-        bottom:25px;
-        width: 100%;
-        height: auto;
-        /* height: 100%; */
-        border:2px solid red;
-        overflow: auto;
+    .main{
+        position:relative;
+        margin-left: 100px;
+        width: 100px;
+        height: 100%;
+        background: forestgreen;
     }
 
    .footer{
-        position:absolute;
+        position:fixed;
         bottom:0;
+
         width:100%;
         height:25px;
         background:rgb(255, 255, 255);
-        /* line-height:25px;
-        text-align: left; */
+        font-size: small;
+
+        margin-top: 5px;
+        line-height:25px;
+        text-align: left;
     }
 
     .bander{
@@ -118,14 +124,22 @@
 
     /*  */
 
-
+    .middle{
+        position:absolute;
+        top: 65px;
+        /* bottom: 100px; */
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        border:2px solid red;
+    }
 
     .sub{
         position: relative;
         margin-top: 5px;
         margin-bottom: 50px;
         width: 100px;
-        /* height: 100%; */
+        height: 100%;
         background-color:rgb(255, 255, 255);
         resize: horizontal;
         overflow: hidden;
@@ -148,7 +162,6 @@
 
     </style>
     <body>
-    <div>
         <div class="header">
             <div class="bander">
                 <div class="left">SAS<sup>&reg;</sup> Customer Intelligence Studio</div>
@@ -166,19 +179,16 @@
             </div>
         </div>
 
-
-
-        <div class="footer">
-            <div class="msg">提醒：共有9个，9个为新提醒</div>
-            <div class="userinfo">| 业务环境01 | 用户：SAS演示用户</div>
-        </div>
-
         <div class="middle">
             <div id="moveBarBox" class="sub"  onmousedown="startDrag()">
                 <div class="inner" ></div>
             </div>
         </div>
-    </div>
+
+        <div class="footer">
+            <div class="msg">提醒：共有9个，9个为新提醒</div>
+            <div class="userinfo">| 业务环境01 | 用户：SAS演示用户</div>
+        </div>
 
     </body>
 </html>
